# Trabajo_Iot

./: README.md
src/src/: CMakeLists.txt  base_datos.cpp  base_datos.h  main_consulta.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sensores.cpp  sensores.h  ui_mainwindow.h
